--- a/.classpath
+++ b/.classpath
@@ -12,11 +12,12 @@
 	<classpathentry kind="lib" path="C:/Users/matth/Fiji.app/jars/commons-csv-1.6.jar"/>
 	<classpathentry kind="lib" path="C:/Users/matth/Fiji.app/plugins/IA_Class_Library_v2.082.jar"/>
 	<classpathentry kind="lib" path="C:/Users/matth/Fiji.app/plugins/3D_Objects_Counter-2.0.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/matth/Fiji.app/plugins/bio-formats_plugins-6.4.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/matth/Fiji.app/plugins/bio-formats_plugins-6.5.0.jar"/>
 	<classpathentry kind="lib" path="C:/Users/matth/Fiji.app/plugins/Data_Analysis.jar"/>
 	<classpathentry kind="lib" path="C:/Users/matth/Fiji.app/jars/commons-io-2.6.jar"/>
 	<classpathentry kind="lib" path="C:/Users/matth/.p2/pool/plugins/org.eclipse.swt.win32.win32.x86_64_3.109.0.v20181204-1801.jar" sourcepath="C:/Users/matth/.p2/pool/plugins/org.eclipse.swt.win32.win32.x86_64_3.109.0.v20181204-1801.jar"/>
 	<classpathentry kind="lib" path="C:/Users/matth/Fiji.app/jars/poi-4.1.1/poi-4.1.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/matth/Fiji.app/jars/poi-4.1.1/poi-ooxml-4.1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/matth/Fiji.app/plugins/flanagan.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
