--- a/.classpath
+++ b/.classpath
@@ -6,11 +6,11 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/matth/Fiji.app/plugins/Adapt__v2.006.jar"/>
+	<classpathentry kind="lib" path="C:/Users/matth/Fiji.app/plugins/adapt-3.0.0.jar"/>
 	<classpathentry kind="lib" path="C:/Users/matth/Fiji.app/jars/ij-1.52n.jar" sourcepath="C:/Users/matth/Fiji.app"/>
 	<classpathentry kind="lib" path="C:/Users/matth/Fiji.app/jars/commons-math3-3.6.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/matth/Fiji.app/jars/commons-csv-1.6.jar"/>
-	<classpathentry kind="lib" path="C:/Users/matth/Fiji.app/plugins/IA_Class_Library_v2.082.jar"/>
+	<classpathentry kind="lib" path="C:/Users/matth/Fiji.app/jars/commons-csv-1.8.jar"/>
+	<classpathentry kind="lib" path="C:/Users/matth/Fiji.app/plugins/iaclasslibrary-1.0.3.jar"/>
 	<classpathentry kind="lib" path="C:/Users/matth/Fiji.app/plugins/3D_Objects_Counter-2.0.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/matth/Fiji.app/plugins/bio-formats_plugins-6.5.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/matth/Fiji.app/plugins/Data_Analysis.jar"/>
