--- a/.classpath
+++ b/.classpath
@@ -6,22 +6,18 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/matth/Fiji.app/plugins/adapt-3.0.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/matth/Fiji.app/plugins/adaptdataprocessing-1.0.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/matth/Fiji.app/plugins/adapt-3.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/matth/Fiji.app/plugins/adaptdataprocessing-1.0.0.jar"/>
 	<classpathentry kind="lib" path="C:/Users/matth/Fiji.app/jars/ij-1.53c.jar" sourcepath="C:/Users/matth/Fiji.app"/>
 	<classpathentry kind="lib" path="C:/Users/matth/Fiji.app/jars/commons-math3-3.6.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/matth/Fiji.app/jars/commons-csv-1.8.jar"/>
-	<classpathentry kind="lib" path="C:/Users/matth/Fiji.app/plugins/iaclasslibrary-1.0.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/matth/Fiji.app/plugins/3D_Objects_Counter-2.0.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/matth/Fiji.app/plugins/bio-formats_plugins-6.6.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/matth/Fiji.app/plugins/Data_Analysis.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/matth/Fiji.app/plugins/iaclasslibrary-1.0.6.jar"/>
 	<classpathentry kind="lib" path="C:/Users/matth/Fiji.app/jars/commons-io-2.7.jar"/>
 	<classpathentry kind="lib" path="C:/Users/matth/.p2/pool/plugins/org.eclipse.swt.win32.win32.x86_64_3.109.0.v20181204-1801.jar" sourcepath="C:/Users/matth/.p2/pool/plugins/org.eclipse.swt.win32.win32.x86_64_3.109.0.v20181204-1801.jar"/>
 	<classpathentry kind="lib" path="C:/Users/matth/Fiji.app/jars/poi-4.1.1/poi-4.1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/matth/Fiji.app/plugins/flanagan.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/matth/Fiji.app/plugins/gdsc_smlm-0.7.0-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/matth/Fiji.app/plugins/gdsc_-1.4.0-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="C:/Users/matth/Fiji.app/jars/poi-4.1.1/poi-ooxml-4.1.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/matth/Fiji.app/plugins/flanagan.jar"/>
-	<classpathentry kind="lib" path="C:/Users/matth/Fiji.app/plugins/Multi_Kymograph-3.0.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/matth/Fiji.app/plugins/gdsc_smlm-0.7.0-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="C:/Users/matth/Fiji.app/plugins/gdsc_-1.4.0-SNAPSHOT.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
