--- a/.classpath
+++ b/.classpath
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+	<classpathentry kind="src" path="src">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/matth/Fiji.app/jars/ij-1.53c.jar" sourcepath="C:/Users/matth/Fiji.app"/>
+	<classpathentry kind="lib" path="C:/Users/matth/.p2/pool/plugins/org.eclipse.swt.win32.win32.x86_64_3.109.0.v20181204-1801.jar" sourcepath="C:/Users/matth/.p2/pool/plugins/org.eclipse.swt.win32.win32.x86_64_3.109.0.v20181204-1801.jar"/>
+	<classpathentry kind="lib" path="externals/flanagan.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="C:/Users/matth/Fiji.app/plugins/adapt-3.0.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="C:/Users/matth/Fiji.app/plugins/adaptdataprocessing-1.0.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/matth/Fiji.app/jars/ij-1.53c.jar" sourcepath="C:/Users/matth/Fiji.app"/>
-	<classpathentry kind="lib" path="C:/Users/matth/Fiji.app/jars/commons-math3-3.6.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/matth/Fiji.app/jars/commons-csv-1.8.jar"/>
-	<classpathentry exported="true" kind="lib" path="C:/Users/matth/Fiji.app/plugins/iaclasslibrary-1.0.6.jar"/>
-	<classpathentry kind="lib" path="C:/Users/matth/Fiji.app/jars/commons-io-2.7.jar"/>
-	<classpathentry kind="lib" path="C:/Users/matth/.p2/pool/plugins/org.eclipse.swt.win32.win32.x86_64_3.109.0.v20181204-1801.jar" sourcepath="C:/Users/matth/.p2/pool/plugins/org.eclipse.swt.win32.win32.x86_64_3.109.0.v20181204-1801.jar"/>
-	<classpathentry kind="lib" path="C:/Users/matth/Fiji.app/jars/poi-4.1.1/poi-4.1.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="C:/Users/matth/Fiji.app/plugins/flanagan.jar"/>
-	<classpathentry exported="true" kind="lib" path="C:/Users/matth/Fiji.app/plugins/gdsc_smlm-0.7.0-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="C:/Users/matth/Fiji.app/plugins/gdsc_-1.4.0-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="C:/Users/matth/Fiji.app/jars/poi-4.1.1/poi-ooxml-4.1.1.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="lib" path="externals/gdsc_smlm-0.7.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="externals/adapt-3.0.1.jar"/>
+	<classpathentry kind="lib" path="externals/commons-io-2.7.jar"/>
+	<classpathentry kind="lib" path="externals/poi-4.1.1.jar"/>
+	<classpathentry kind="lib" path="externals/poi-ooxml-4.1.1.jar"/>
+	<classpathentry kind="output" path="plugins"/>
 </classpath>
