--- a/plugins.config
+++ b/plugins.config
@@ -5,7 +5,7 @@
 # 
 # Plugins>MP, "Protrusion Analysis"
 Plugins>MP, "Analyse cell contours only...", MP.Analyse_Contour
-Plugins>MP, "Analyse cell contours and protrusions...", MP.Analyse_Protrusions
+Plugins>MP, "Analyse cell contours and protrusions...", MP.Analyse_Protrusion
 Plugins>MP, "Analyse 2-colour cell protrusions...", MP.Two_Colour_Analysis
 Plugins>MP, "Plot 2-colour cell protrusion results...", MP.Open_MP
 Plugins>MP, "Combine protrusion results...", MP.Combine_Protrusion_Results
