DynMorpho_Analysis plugin - a copy of the plugin written for Jen's lab MP v 1.542

--- a/plugins.config
+++ b/plugins.config
@@ -1,7 +1,7 @@
 # Plugin configuration file for Image/J 1.31s or newer
 # 
 # MP package developped by Dr Matthieu Palayret (matthieu.palayret@m4x.org) for Dr Nora Ruef's
-# use in Prof Jens Stein's lab, Université de Fribourg, Switzerland.
+# use in Prof Jens Stein's lab, Universite de Fribourg, Switzerland.
 # 
 # Plugins>MP, "Protrusion Analysis"
 Plugins>MP, "Analyse cell contours only...", MP.Analyse_Contour
