--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/matth/Fiji.app/jars/ij-1.53c.jar" sourcepath="C:/Users/matth/Fiji.app"/>
+	<classpathentry kind="lib" path="C:/Users/matth/Fiji.app/jars/ij-1.53f.jar" sourcepath="C:/Users/matth/Fiji.app"/>
 	<classpathentry kind="lib" path="C:/Users/matth/.p2/pool/plugins/org.eclipse.swt.win32.win32.x86_64_3.109.0.v20181204-1801.jar" sourcepath="C:/Users/matth/.p2/pool/plugins/org.eclipse.swt.win32.win32.x86_64_3.109.0.v20181204-1801.jar"/>
 	<classpathentry kind="lib" path="externals/flanagan.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
